--- a/html-css/week3/form-style.css
+++ b/html-css/week3/form-style.css
@@ -26,18 +26,21 @@ li {
 .nav-header {
   padding: 30px 0;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .nav-menu {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   list-style: none;
   padding-top: 25px;
 }
 .link-a,
 .link-b,
-.link-c {
-  margin-left: 20px;
+.link-c,.link-d {
+  margin-bottom: 20px;
 }
 
 .progressbar {
@@ -212,11 +215,13 @@ button {
   .nav-header {
     padding: 30px 0;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
   }
 
   .nav-menu {
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
     list-style: none;
     padding-top: 25px;
